Simplify routing selections and harden server validation and model reuse